docs/versioned_docs/version-0.12.0/api/v2/engagement/create-sequence-state.api.mdx
---
id: create-sequence-state
title: "Create sequence state"
description: "Create sequence state"
sidebar_label: "Create sequence state"
hide_title: true
hide_table_of_contents: true
api: {"operationId":"createSequenceState","tags":["Sequence States"],"security":[{"ApiKeyAuth":[]}],"parameters":[{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true},{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"outreach"},"description":"The provider name","required":true}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"type":"object","properties":{"record":{"type":"object","properties":{"contact_id":{"type":"string","example":"c590dc63-8e43-48a4-8154-1fbb00ac936b"},"mailbox_id":{"type":"string","example":"39fd1fe0-094b-4a61-b47f-3e3ac033203d"},"sequence_id":{"type":"string","example":"b854e510-1c40-4ef6-ade4-8eb35f49d331"}},"required":["contact_id","mailbox_id","sequence_id"],"title":"create_sequence_state"}},"required":["record"]},"example":{"record":{"id":"355843a5-c536-4e82-b497-05160bfb7d78","state":"active","mailbox_id":"a7e860b5-cb8b-400b-812d-921fa526140c","contact_id":"6bdcebc2-f886-4de3-88ed-0b9eb420f7b1","sequence_id":"45e07817-fd59-4ec8-a727-066d2db27c9b","created_at":"2023-02-27T00:00:00Z","updated_at":"2023-02-27T00:00:00Z"}}}}},"responses":{"201":{"description":"Sequence state created","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string","example":"name is a required field on model."},"problem_type":{"type":"string","example":"MISSING_REQUIRED_FIELD"},"source":{"type":"object","properties":{"pointer":{"type":"string","example":"irure consectetur"}}},"title":{"type":"string","example":"Missing Required Field"}},"example":[{"detail":"name is a required field on model.","problem_type":"MISSING_REQUIRED_FIELD","source":{"pointer":"irure consectetur"},"title":"Missing Required Field"},{"detail":"name is a required field on model.","problem_type":"MISSING_REQUIRED_FIELD","source":{"pointer":"et"},"title":"Missing Required Field"}]},"title":"errors"},"logs":{"type":"array","items":{"type":"object","properties":{"dashboard_view":{"type":"string","example":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832"},"log_id":{"type":"string","example":"99433219-8017-4acd-bb3c-ceb23d663832"},"log_summary":{"type":"object","properties":{"method":{"type":"string","example":"POST"},"status_code":{"type":"number","example":200},"url":{"type":"string","example":"https://harvest.greenhouse.io/v1/candidates/"}}}}},"example":[{"dashboard_view":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832","log_id":"99433219-8017-4acd-bb3c-ceb23d663832","log_summary":{"method":"POST","status_code":200,"url":"https://harvest.greenhouse.io/v1/candidates/"}},{"dashboard_view":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832","log_id":"99433219-8017-4acd-bb3c-ceb23d663832","log_summary":{"method":"POST","status_code":200,"url":"https://harvest.greenhouse.io/v1/candidates/"}}],"title":"logs"},"record":{"type":"object","properties":{"id":{"type":"string"}},"required":["id"],"title":"created_record"},"warnings":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string","example":"An unrecognized field, age, was passed in with request data."},"problem_type":{"type":"string","example":"UNRECOGNIZED_FIELD"},"source":{"type":"object","properties":{"pointer":{"type":"string","example":"Lorem ipsum"}}},"title":{"type":"string","example":"Unrecognized Field"}}},"example":[{"detail":"An unrecognized field, age, was passed in with request data.","problem_type":"UNRECOGNIZED_FIELD","source":{"pointer":"Lorem ipsum"},"title":"Unrecognized Field"},{"detail":"An unrecognized field, age, was passed in with request data.","problem_type":"UNRECOGNIZED_FIELD","source":{"pointer":"in"},"title":"Unrecognized Field"}],"title":"warnings"}}}}}}},"description":"Create sequence state","method":"post","path":"/sequence_states","servers":[{"url":"https://api.supaglue.io/engagement/v2","description":"Supaglue API"}],"securitySchemes":{"ApiKeyAuth":{"type":"apiKey","name":"x-api-key","in":"header","description":"API key to allow developers to access the API"}},"jsonRequestBodyExample":{"record":{"contact_id":"c590dc63-8e43-48a4-8154-1fbb00ac936b","mailbox_id":"39fd1fe0-094b-4a61-b47f-3e3ac033203d","sequence_id":"b854e510-1c40-4ef6-ade4-8eb35f49d331"}},"info":{"version":"0.12.0","title":"Supaglue Engagement API","contact":{"name":"Supaglue"},"description":"#### Introduction\nWelcome to the Supaglue Actions API (Engagement) documentation. You can use this API to write to third-party providers.\n\n[![Run in Postman](https://run.pstmn.io/button.svg)](https://god.gw.postman.com/run-collection/18172762-a211ef0f-e2e3-4ac0-b833-97125995c6f7?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D18172762-a211ef0f-e2e3-4ac0-b833-97125995c6f7%26entityType%3Dcollection%26workspaceId%3D4d2a33f3-a9f9-41f4-ac2e-5ad4db4a5edb)\n\n#### Reading data\nTo read data from third-party providers, refer to Supaglue's [Managed Syncs](https://docs.supaglue.com/integration-patterns/managed-syncs) feature.\n\n#### Base API URL\n\n```\nhttps://api.supaglue.io/engagement/v2\n```\n"},"postman":{"name":"Create sequence state","description":{"type":"text/plain"},"url":{"path":["sequence_states"],"host":["{{baseUrl}}"],"query":[],"variable":[]},"header":[{"disabled":false,"description":{"content":"(Required) The customer ID that uniquely identifies the customer in your application","type":"text/plain"},"key":"x-customer-id","value":""},{"disabled":false,"description":{"content":"(Required) The provider name","type":"text/plain"},"key":"x-provider-name","value":""},{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}},"auth":{"type":"apikey","apikey":[{"type":"any","value":"x-api-key","key":"key"},{"type":"any","value":"<API Key>","key":"value"},{"type":"any","value":"header","key":"in"}]}}}
sidebar_class_name: "post api-method"
info_path: api/v2/engagement/supaglue-engagement-api
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import MethodEndpoint from "@theme/ApiDemoPanel/MethodEndpoint";
import SecuritySchemes from "@theme/ApiDemoPanel/SecuritySchemes";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";

<h1 className={"openapi__heading"}>Create sequence state</h1>

<MethodEndpoint method={"post"} path={"/sequence_states"}></MethodEndpoint>

<SecuritySchemes infoPath={"api/v2/engagement/supaglue-engagement-api"}></SecuritySchemes>



Create sequence state

## Request

<details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Header Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"outreach"},"description":"The provider name","required":true}}></ParamsItem></ul></div></details><MimeTabs className={"openapi-tabs__mime"}><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} className={"openapi-markdown__details mime"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-mime"}><h3 className={"openapi-markdown__details-summary-header-body"}>Body</h3><strong className={"openapi-schema__required"}>required</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>record</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"contact_id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"c590dc63-8e43-48a4-8154-1fbb00ac936b"}}></SchemaItem><SchemaItem collapsible={false} name={"mailbox_id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"39fd1fe0-094b-4a61-b47f-3e3ac033203d"}}></SchemaItem><SchemaItem collapsible={false} name={"sequence_id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"b854e510-1c40-4ef6-ade4-8eb35f49d331"}}></SchemaItem></div></details></SchemaItem></ul></details></TabItem></MimeTabs><div><div><ApiTabs><TabItem label={"201"} value={"201"}><div>

Sequence state created

</div><div><MimeTabs className={"openapi-tabs__mime"} schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs className={"openapi-tabs__schema"}><TabItem label={"Schema"} value={"Schema"}><details style={{}} className={"openapi-markdown__details response"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-response"}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>errors</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"name is a required field on model."}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"MISSING_REQUIRED_FIELD"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>source</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"pointer"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"irure consectetur"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Missing Required Field"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>logs</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"dashboard_view"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832"}}></SchemaItem><SchemaItem collapsible={false} name={"log_id"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"99433219-8017-4acd-bb3c-ceb23d663832"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>log_summary</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"method"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"POST"}}></SchemaItem><SchemaItem collapsible={false} name={"status_code"} required={false} schemaName={"number"} qualifierMessage={undefined} schema={{"type":"number","example":200}}></SchemaItem><SchemaItem collapsible={false} name={"url"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"https://harvest.greenhouse.io/v1/candidates/"}}></SchemaItem></div></details></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>record</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>warnings</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"An unrecognized field, age, was passed in with request data."}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"UNRECOGNIZED_FIELD"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>source</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"pointer"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Lorem ipsum"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Unrecognized Field"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    [\n      {\n        \"detail\": \"name is a required field on model.\",\n        \"problem_type\": \"MISSING_REQUIRED_FIELD\",\n        \"source\": {\n          \"pointer\": \"irure consectetur\"\n        },\n        \"title\": \"Missing Required Field\"\n      },\n      {\n        \"detail\": \"name is a required field on model.\",\n        \"problem_type\": \"MISSING_REQUIRED_FIELD\",\n        \"source\": {\n          \"pointer\": \"et\"\n        },\n        \"title\": \"Missing Required Field\"\n      }\n    ]\n  ],\n  \"logs\": [\n    {\n      \"dashboard_view\": \"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_id\": \"99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_summary\": {\n        \"method\": \"POST\",\n        \"status_code\": 200,\n        \"url\": \"https://harvest.greenhouse.io/v1/candidates/\"\n      }\n    },\n    {\n      \"dashboard_view\": \"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_id\": \"99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_summary\": {\n        \"method\": \"POST\",\n        \"status_code\": 200,\n        \"url\": \"https://harvest.greenhouse.io/v1/candidates/\"\n      }\n    }\n  ],\n  \"record\": {\n    \"id\": \"string\"\n  },\n  \"warnings\": [\n    {\n      \"detail\": \"An unrecognized field, age, was passed in with request data.\",\n      \"problem_type\": \"UNRECOGNIZED_FIELD\",\n      \"source\": {\n        \"pointer\": \"Lorem ipsum\"\n      },\n      \"title\": \"Unrecognized Field\"\n    },\n    {\n      \"detail\": \"An unrecognized field, age, was passed in with request data.\",\n      \"problem_type\": \"UNRECOGNIZED_FIELD\",\n      \"source\": {\n        \"pointer\": \"in\"\n      },\n      \"title\": \"Unrecognized Field\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div></div>
      